--- a/materials/NLP-I/codes/V-neural-network-solved.ipynb
+++ b/materials/NLP-I/codes/V-neural-network-solved.ipynb
@@ -41,25 +41,20 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "VsB9NgY7XtWx",
-        "outputId": "1c432992-a939-428d-931e-70801b914372",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "VsB9NgY7XtWx",
+        "outputId": "1c432992-a939-428d-931e-70801b914372"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "                                                text  label\n",
-              "0  Wall St. Bears Claw Back Into the Black (Reute...      2\n",
-              "1  Carlyle Looks Toward Commercial Aerospace (Reu...      2\n",
-              "2  Oil and Economy Cloud Stocks' Outlook (Reuters...      2\n",
-              "3  Iraq Halts Oil Exports from Main Southern Pipe...      2\n",
-              "4  Oil prices soar to all-time record, posing new...      2"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df_ag_new"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-95fedbd9-f8d2-4ef3-9f30-a9252f7b3dd4\" class=\"colab-df-container\">\n",
@@ -324,13 +319,18 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "df_ag_new"
-            }
+            "text/plain": [
+              "                                                text  label\n",
+              "0  Wall St. Bears Claw Back Into the Black (Reute...      2\n",
+              "1  Carlyle Looks Toward Commercial Aerospace (Reu...      2\n",
+              "2  Oil and Economy Cloud Stocks' Outlook (Reuters...      2\n",
+              "3  Iraq Halts Oil Exports from Main Southern Pipe...      2\n",
+              "4  Oil prices soar to all-time record, posing new...      2"
+            ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -343,21 +343,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_ag_new.info()"
-      ],
+      "execution_count": 3,
       "metadata": {
-        "id": "NBK6VvXP0cck",
-        "outputId": "37893b22-143e-48dd-bda6-18f50afbbed7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NBK6VvXP0cck",
+        "outputId": "37893b22-143e-48dd-bda6-18f50afbbed7"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 120000 entries, 0 to 119999\n",
@@ -370,6 +367,9 @@
             "memory usage: 1.8+ MB\n"
           ]
         }
+      ],
+      "source": [
+        "df_ag_new.info()"
       ]
     },
     {
@@ -405,6 +405,50 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l3kXCHzUyXb4",
+        "outputId": "eae9c843-f840-4988-8f32-21274c99f164"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "Lowercasing: 100%|██████████| 120000/120000 [00:00<00:00, 532558.18it/s]\n",
+            "Removing whitespace: 100%|██████████| 120000/120000 [00:00<00:00, 920735.69it/s]\n",
+            "Removing special characters: 100%|██████████| 120000/120000 [00:00<00:00, 288537.35it/s]\n",
+            "Removing stop words: 100%|██████████| 120000/120000 [00:00<00:00, 155116.71it/s]\n",
+            "Lemmatization: 100%|██████████| 120000/120000 [00:14<00:00, 8259.92it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                                                text  label\n",
+            "0  wall st bear claw back black reuters reuters s...      2\n",
+            "1  carlyle look toward commercial aerospace reute...      2\n",
+            "2  oil economy cloud stock outlook reuters reuter...      2\n",
+            "3  iraq halt oil export main southern pipeline re...      2\n",
+            "4  oil price soar alltime record posing new menac...      2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# prompt: Please write me a python which clean the\n",
         "# df_ag_new dataset text column step  by step based on\n",
@@ -450,90 +494,23 @@
         "tqdm.pandas(desc=\"Lemmatization\")\n",
         "df_ag_new['text'] = df_ag_new['text'].progress_apply(lambda x: ' '.join([lemmatizer.lemmatize(word) for word in x.split()]))\n",
         "\n",
-        "print(df_ag_new.head())\n"
-      ],
-      "metadata": {
-        "id": "l3kXCHzUyXb4",
-        "outputId": "eae9c843-f840-4988-8f32-21274c99f164",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n",
-            "Lowercasing: 100%|██████████| 120000/120000 [00:00<00:00, 532558.18it/s]\n",
-            "Removing whitespace: 100%|██████████| 120000/120000 [00:00<00:00, 920735.69it/s]\n",
-            "Removing special characters: 100%|██████████| 120000/120000 [00:00<00:00, 288537.35it/s]\n",
-            "Removing stop words: 100%|██████████| 120000/120000 [00:00<00:00, 155116.71it/s]\n",
-            "Lemmatization: 100%|██████████| 120000/120000 [00:14<00:00, 8259.92it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "                                                text  label\n",
-            "0  wall st bear claw back black reuters reuters s...      2\n",
-            "1  carlyle look toward commercial aerospace reute...      2\n",
-            "2  oil economy cloud stock outlook reuters reuter...      2\n",
-            "3  iraq halt oil export main southern pipeline re...      2\n",
-            "4  oil price soar alltime record posing new menac...      2\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
+        "print(df_ag_new.head())"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# prompt: Write a unit test to the lower casing validation.\n",
-        "\n",
-        "import pandas as pd\n",
-        "import unittest\n",
-        "\n",
-        "class TestLowerCasing(unittest.TestCase):\n",
-        "\n",
-        "    def test_lower_casing(self):\n",
-        "        # Create a sample DataFrame with a 'text' column\n",
-        "        df = pd.DataFrame({'text': ['This Is A Test', 'ANOTHER TEST']})\n",
-        "\n",
-        "        # Apply the lower casing function to the DataFrame\n",
-        "        tqdm.pandas(desc=\"Lowercasing\")\n",
-        "        df['text'] = df['text'].progress_apply(lambda x: x.lower())\n",
-        "\n",
-        "        # Assert that all text values are lower case\n",
-        "        self.assertTrue(all([isinstance(text, str) and text.islower() for text in df['text']]))\n",
-        "\n",
-        "\n",
-        "# Run the tests\n",
-        "unittest.main(argv=['first-arg-is-ignored'], exit=False)\n"
-      ],
+      "execution_count": 6,
       "metadata": {
-        "id": "-dZmwp773cBY",
-        "outputId": "7530576a-921f-47ee-8c53-1dabc12e5a7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-dZmwp773cBY",
+        "outputId": "7530576a-921f-47ee-8c53-1dabc12e5a7b"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Lowercasing: 100%|██████████| 2/2 [00:00<00:00, 1158.49it/s]\n",
             ".\n",
@@ -544,15 +521,35 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<unittest.main.TestProgram at 0x7a99053ecfd0>"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# prompt: Write a unit test to the lower casing validation.\n",
+        "\n",
+        "import pandas as pd\n",
+        "import unittest\n",
+        "\n",
+        "class TestLowerCasing(unittest.TestCase):\n",
+        "\n",
+        "    def test_lower_casing(self):\n",
+        "        # Apply the lower casing function to the DataFrame\n",
+        "        tqdm.pandas(desc=\"Lowercasing\")\n",
+        "        df_ag_new['text'] = df_ag_new['text'].progress_apply(lambda x: x.lower())\n",
+        "\n",
+        "        # Assert that all text values are lower case\n",
+        "        self.assertTrue(all([isinstance(text, str) and text.islower() for text in df_ag_new['text']]))\n",
+        "\n",
+        "\n",
+        "# Run the tests\n",
+        "unittest.main(argv=['first-arg-is-ignored'], exit=False)"
       ]
     },
     {
@@ -569,46 +566,46 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "X = df_ag_new['text'].values\n",
-        "y = df_ag_new['label'].values\n",
-        "X.shape, y.shape"
-      ],
+      "execution_count": 7,
       "metadata": {
-        "id": "aO-lDkJ54nH_",
-        "outputId": "a4a36296-8396-473a-e690-d88325b6295b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aO-lDkJ54nH_",
+        "outputId": "a4a36296-8396-473a-e690-d88325b6295b"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "((120000,), (120000,))"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "X = df_ag_new['text'].values\n",
+        "y = df_ag_new['label'].values\n",
+        "X.shape, y.shape"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "A_9Jo7oWelHw",
-        "outputId": "91d11749-9f64-4576-a131-a9f19c261e58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "A_9Jo7oWelHw",
+        "outputId": "91d11749-9f64-4576-a131-a9f19c261e58"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "X_train shape: (96000,)\n",
             "y_train shape: (96000,)\n",
@@ -640,28 +637,28 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "H3-BxZgKdqUC",
-        "outputId": "9a3ad2b5-2f82-444a-cc0d-e51caec1ff71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "H3-BxZgKdqUC",
+        "outputId": "9a3ad2b5-2f82-444a-cc0d-e51caec1ff71"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "((96000, 1000), (12000, 1000), (12000, 1000))"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "# prompt: Apply the counter_vectorization on my X train,\n",
         "# test and val varrible. The new varrible names should be X_train_cv,\n",
-        "# text_train_cv and X_val_cv\n",
+        "# X_test_cv and X_val_cv\n",
         "\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "\n",
@@ -677,16 +674,16 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "SbzPCwnLgoXB",
-        "outputId": "e9ae608b-7e31-42f6-8718-5a54edff36d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SbzPCwnLgoXB",
+        "outputId": "e9ae608b-7e31-42f6-8718-5a54edff36d0"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "X_train_tfidf shape: (96000, 1000)\n",
             "X_test_tfidf shape: (12000, 1000)\n",
@@ -696,7 +693,7 @@
       ],
       "source": [
         "# prompt: Apply the TFIDF on my X train, test and val varrible.\n",
-        "# The new varrible names should be X_train_tfidf, text_train_tfidf and\n",
+        "# The new varrible names should be X_train_tfidf, X_test_tfidf and\n",
         "# X_val_tfidf\n",
         "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -723,52 +720,52 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "set(y_train[:10])"
-      ],
+      "execution_count": 15,
       "metadata": {
-        "id": "saqPG4GS9P3D",
-        "outputId": "78de2b05-38ea-4d2f-df46-83cefd1fad37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "saqPG4GS9P3D",
+        "outputId": "78de2b05-38ea-4d2f-df46-83cefd1fad37"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{0, 1, 2, 3}"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "set(y_train[:10])"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "q9sIWrHXjjVT",
-        "outputId": "7cef3380-b58b-485f-c6e1-83254504a90a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q9sIWrHXjjVT",
+        "outputId": "7cef3380-b58b-485f-c6e1-83254504a90a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
             "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
             "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.8262 - loss: 0.4938 - val_accuracy: 0.8665 - val_loss: 0.3650\n",
@@ -826,16 +823,16 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "ARn3n12plwgq",
-        "outputId": "badc5248-3113-4208-e7a2-adf8cf10dd1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ARn3n12plwgq",
+        "outputId": "badc5248-3113-4208-e7a2-adf8cf10dd1c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
             "\u001b[1m3000/3000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.8241 - loss: 0.5063 - val_accuracy: 0.8691 - val_loss: 0.3611\n",
@@ -898,16 +895,16 @@
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
-        "id": "fq6IAFYqlmnj",
-        "outputId": "9f977dd8-2c47-468f-bd66-fcda9102428b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fq6IAFYqlmnj",
+        "outputId": "9f977dd8-2c47-468f-bd66-fcda9102428b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m375/375\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8644 - loss: 0.9043\n",
             "Test accuracy (CountVectorizer): 0.8652499914169312\n",
@@ -939,16 +936,16 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "X_tGRXqqwtQq",
-        "outputId": "d1e6effd-4ebf-4dfc-e870-b67a3dbb56d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X_tGRXqqwtQq",
+        "outputId": "d1e6effd-4ebf-4dfc-e870-b67a3dbb56d0"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 83ms/step\n",
             "Predictions: [3, 0, 2, 3, 3]\n",
