--- a/materials/NLP-I/submitted/2023-2.md
+++ b/materials/NLP-I/submitted/2023-2.md
@@ -1,7 +1,7 @@
 ---
 title: "Submitted videos"
 collection: teaching
-type: "M.Sc course"
+type: "B.Sc course"
 permalink: /materials/NLP-I/submitted/2023-2
 venue: "University of Debrecen, Department of Data Science and Visualization"
 date: 2024-02-26
