--- a/materials/NLP-I/submitted/2024-2.md
+++ b/materials/NLP-I/submitted/2024-2.md
@@ -11,136 +11,136 @@ location: "Debrecen, Hungary"
 
 ## 1
 
-<iframe width="1250" height="703" src="https://youtu.be/N81ZdNW3IeU" title="inlp bead 2024 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/N81ZdNW3IeU" title="inlp bead 2024 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 2
 
-<iframe width="1250" height="703" src="https://youtu.be/-TYgRPY-H5M" title="inlp bead 2024 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/-TYgRPY-H5M" title="inlp bead 2024 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 3
 
-<iframe width="1250" height="703" src="https://youtu.be/T2XcWCLS9xI" title="inlp bead 2024 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/T2XcWCLS9xI" title="inlp bead 2024 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 4
 
-<iframe width="1250" height="703" src="https://youtu.be/2rUc4QU1wUY" title="inlp bead 2024 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/2rUc4QU1wUY" title="inlp bead 2024 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 5
 
-<iframe width="1250" height="703" src="https://youtu.be/idpHgmF6DNE" title="inlp bead 2024 5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/idpHgmF6DNE" title="inlp bead 2024 5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 6
 
-<iframe width="1250" height="703" src="https://youtu.be/jggI377_1aY" title="inlp bead 2024 6" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/jggI377_1aY" title="inlp bead 2024 6" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 7
 
-<iframe width="1250" height="703" src="https://youtu.be/E-E2cIT7oZM" title="inlp bead 2024 7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/E-E2cIT7oZM" title="inlp bead 2024 7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 8
 
-<iframe width="1250" height="703" src="https://youtu.be/eCFWba2udRI" title="inlp bead 2024 8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/eCFWba2udRI" title="inlp bead 2024 8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 9
 
-<iframe width="1250" height="703" src="https://youtu.be/Ah-hKPC0G_0" title="inlp bead 2024 9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/Ah-hKPC0G_0" title="inlp bead 2024 9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 10
 
-<iframe width="1250" height="703" src="https://youtu.be/K-1yGo-v-kQ" title="inlp bead 2024 10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/K-1yGo-v-kQ" title="inlp bead 2024 10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 11
 
-<iframe width="1250" height="703" src="https://youtu.be/gMHfsPUL2Xs" title="inlp bead 2024 11" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/gMHfsPUL2Xs" title="inlp bead 2024 11" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 12
 
-<iframe width="1250" height="703" src="https://youtu.be/fZUvVAiI380" title="inlp bead 2024 12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/fZUvVAiI380" title="inlp bead 2024 12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 13
 
-<iframe width="1250" height="703" src="https://youtu.be/Ryvc1mJhUVM" title="inlp bead 2024 13" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/Ryvc1mJhUVM" title="inlp bead 2024 13" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 14
 
-<iframe width="1250" height="703" src="https://youtu.be/Ghb-o9AVfX4" title="inlp bead 2024 14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/Ghb-o9AVfX4" title="inlp bead 2024 14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 15
 
-<iframe width="1250" height="703" src="https://youtu.be/zMrJb8rW_Wk" title="inlp bead 2024 15" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/zMrJb8rW_Wk" title="inlp bead 2024 15" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 16
 
-<iframe width="1250" height="703" src="https://youtu.be/dGhpfO7dZbo" title="inlp bead 2024 16" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/dGhpfO7dZbo" title="inlp bead 2024 16" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 17
 
-<iframe width="1250" height="703" src="https://youtu.be/zKzpr6k8o9Q" title="inlp bead 2024 17" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/zKzpr6k8o9Q" title="inlp bead 2024 17" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 18
 
-<iframe width="1250" height="703" src="https://youtu.be/eSPWCzskwjM" title="inlp bead 2024 18" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/eSPWCzskwjM" title="inlp bead 2024 18" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 19
 
-<iframe width="1250" height="703" src="https://youtu.be/lD_VGiRiu5U" title="inlp bead 2024 19" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/lD_VGiRiu5U" title="inlp bead 2024 19" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 20
 
-<iframe width="1250" height="703" src="https://youtu.be/8wnsQKLtm6I" title="inlp bead 2024 20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/8wnsQKLtm6I" title="inlp bead 2024 20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 21
 
-<iframe width="1250" height="703" src="https://youtu.be/GbY0BnNwXVQ" title="inlp bead 2024 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/GbY0BnNwXVQ" title="inlp bead 2024 21" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 22
 
-<iframe width="1250" height="703" src="https://youtu.be/ADC6UP9kUVw" title="inlp bead 2024 22" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/ADC6UP9kUVw" title="inlp bead 2024 22" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 23
 
-<iframe width="1250" height="703" src="https://youtu.be/bk5EGUI430Y" title="inlp bead 2024 23" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/bk5EGUI430Y" title="inlp bead 2024 23" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 24
 
-<iframe width="1250" height="703" src="https://youtu.be/ej3-d5ll-8M" title="inlp bead 2024 24" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/ej3-d5ll-8M" title="inlp bead 2024 24" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 25
 
-<iframe width="1250" height="703" src="https://youtu.be/XPnOOREGiso" title="inlp bead 2024 25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/XPnOOREGiso" title="inlp bead 2024 25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 26
 
-<iframe width="1250" height="703" src="https://youtu.be/k8guQOYkrOs" title="inlp bead 2024 26" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/k8guQOYkrOs" title="inlp bead 2024 26" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 27
 
-<iframe width="1250" height="703" src="https://youtu.be/c1DnQLksbcY" title="inlp bead 2024 27" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/c1DnQLksbcY" title="inlp bead 2024 27" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 28
 
-<iframe width="1250" height="703" src="https://youtu.be/Srgqwq32XT8" title="inlp bead 2024 28" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/Srgqwq32XT8" title="inlp bead 2024 28" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 29
 
-<iframe width="1250" height="703" src="https://youtu.be/Flm6eg0AMlQ" title="inlp bead 2024 29" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/Flm6eg0AMlQ" title="inlp bead 2024 29" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 30
 
-<iframe width="1250" height="703" src="https://youtu.be/yJENNL-i79c" title="inlp bead 2024 30" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/yJENNL-i79c" title="inlp bead 2024 30" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 31
 
-<iframe width="1250" height="703" src="https://youtu.be/k-xUvTmkzVA" title="inlp bead 2024 31" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/k-xUvTmkzVA" title="inlp bead 2024 31" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 32
 
-<iframe width="1250" height="703" src="https://youtu.be/f6uwkZgq-Vg" title="inlp bead 2024 32" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/f6uwkZgq-Vg" title="inlp bead 2024 32" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 33
 
-<iframe width="1250" height="703" src="https://youtu.be/1Qs5H8FrA7E" title="inlp bead 2024 33" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/1Qs5H8FrA7E" title="inlp bead 2024 33" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 34
 
-<iframe width="1250" height="703" src="https://youtu.be/BlySaVLvr2o" title="inlp bead 2024 34" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/BlySaVLvr2o" title="inlp bead 2024 34" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
