--- a/materials/NLP-I/submitted/2024-2.md
+++ b/materials/NLP-I/submitted/2024-2.md
@@ -144,3 +144,7 @@ location: "Debrecen, Hungary"
 ## 34
 
 <iframe width="1250" height="703" src="https://www.youtube.com/embed/BlySaVLvr2o" title="inlp bead 2024 34" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+## 35
+
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/ScEXpvxaBOo" title="inlp bead 2024 35" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
