--- a/materials/NLP-A/codes/vector-store.ipynb
+++ b/materials/NLP-A/codes/vector-store.ipynb
@@ -6,9 +6,7 @@
         "id": "7cbN2HBEJyyB"
       },
       "source": [
-        "# Creation of LLM-based Agents for the MedQuad database\n",
-        "\n",
-        "MedQuad (Medical Question Answering Dataset) is an English-language medical database developed primarily for artificial intelligence and natural language processing (NLP) research. This database contains question-answer pairs focused on medical topics and is designed to help automated systems provide accurate and reliable answers to medical questions. The content of the database is generally drawn from medical literature, clinical information, and authoritative sources such as publications from the National Institutes of Health (NIH) or other recognized health organizations."
+        "# Create Vectore Store"
       ]
     },
     {
