--- a/materials/NLP-A/codes/tokenization.ipynb
+++ b/materials/NLP-A/codes/tokenization.ipynb
@@ -6,25 +6,14 @@
         "id": "zysf6Ss4H0h0"
       },
       "source": [
-        "# Tokenizáció\n",
-        "\n",
-        "- A mondatok szavakra, szórészekre vagy karakterekre történő darabolása\n",
-        "- Fajtái:\n",
-        "    - Karakter alapú\n",
-        "    - Szó, alszó alapú\n",
-        "- Cél: A feldolgozni kívánt adathalmaz szavakra vagy karakterekre történő tördelése olyan módon hogy az analízishez felhasznált gépi tanuló eljárás a saját szótára segítségével azt beazonosítani tudja.\n",
-        "- Trade-off: méret vs hatékonyság"
+        "# Tokenizáció"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3J99-eFwUG7k",
-        "outputId": "71d23bb8-53fb-433e-9d52-035368179c35"
+        "id": "3J99-eFwUG7k"
       },
       "outputs": [],
       "source": [
@@ -38,18 +27,14 @@
         "id": "gtFbC4F-H0h7"
       },
       "source": [
-        "## Karakter alapú tokenizáció"
+        "## Character-based tokenization"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1UxwXHBNH0h9",
-        "outputId": "82b1ed77-4707-4b59-82c3-311297aaf39d"
+        "id": "1UxwXHBNH0h9"
       },
       "outputs": [],
       "source": [
@@ -61,11 +46,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YXXJYDazH8_6",
-        "outputId": "388cab9e-1a07-4a34-e856-576be66a1695"
+        "id": "YXXJYDazH8_6"
       },
       "outputs": [],
       "source": [
@@ -77,11 +58,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ES5i9DKpH-RJ",
-        "outputId": "3129e5a6-3588-4870-802d-7016a0045f39"
+        "id": "ES5i9DKpH-RJ"
       },
       "outputs": [],
       "source": [
@@ -93,11 +70,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "N39djy2yH_54",
-        "outputId": "785bc4b1-0940-473d-a0e5-ba5e9483bff8"
+        "id": "N39djy2yH_54"
       },
       "outputs": [],
       "source": [
@@ -109,11 +82,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iCKUpLPXIEQh",
-        "outputId": "60a6510d-ec51-4cf8-e3d3-3db86bec6f6f"
+        "id": "iCKUpLPXIEQh"
       },
       "outputs": [],
       "source": [
@@ -127,9 +96,9 @@
         "id": "hmZJ8OIYH0h_"
       },
       "source": [
-        "## WordLevel alapú tokenizáció\n",
+        "## WordLevel based tokenization\n",
         "\n",
-        "Ez a „klasszikus” tokenizációs algoritmus. Egyszerűen leképezheti a szavakat az azonosítókra anélkül, hogy bármi különösebb lenne. Ennek az az előnye, hogy nagyon egyszerűen használható és érthető, de a jó lefedettséghez rendkívül nagy szókincsre van szükség. Ez a modell nem fog közvetlenül választani, egyszerűen leképezi a bemeneti tokeneket az azonosítókra."
+        "This is the “classic” tokenization algorithm. You can map words to tokens. The advantage of this is that it is very easy to use and understand, but it requires an extremely large vocabulary for good coverage. This model will not make a direct selection; it simply maps the input words to tokens."
       ]
     },
     {
@@ -145,11 +114,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-SwxpC32KCX0",
-        "outputId": "62b4763a-3016-47b5-9d75-821e4e3b1081"
+        "id": "-SwxpC32KCX0"
       },
       "outputs": [],
       "source": [
@@ -161,11 +126,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "93hRbPCKI3DI",
-        "outputId": "56fc4f0f-bcac-4dbf-ea60-1a5a38704f28"
+        "id": "93hRbPCKI3DI"
       },
       "outputs": [],
       "source": [
@@ -188,11 +149,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NHOdUyeGl_Yu",
-        "outputId": "553c5db1-6cf2-452a-aff8-974aed076dac"
+        "id": "NHOdUyeGl_Yu"
       },
       "outputs": [],
       "source": [
@@ -210,18 +167,14 @@
       "source": [
         "## BPE\n",
         "\n",
-        "Az egyik legnépszerűbb alszó tokenizációs algoritmus. A Byte-Pair-Encoding úgy működik, hogy karakterekkel kezdődik, miközben a leggyakrabban láthatókat egyesíti, így új tokeneket hoz létre. Ezután iteratívan dolgozik, hogy új tokeneket építsen a korpuszban látható leggyakoribb párokból. A BPE olyan szavakat tud felépíteni, amelyeket soha nem látott több részszó token használatával, ezért kisebb szókincsre van szüksége, és kisebb az esélye annak, hogy „unk” (ismeretlen) tokenjei vannak."
+        "One of the most popular subword tokenization algorithms. Byte-Pair-Encoding works by starting with characters and combining the most frequently seen ones to create new tokens. It then works iteratively to build new tokens from the most frequent pairs seen in the corpus. BPE can build words it has never seen before by using multiple subword tokens, so it requires a smaller vocabulary and is less likely to have “unknown” tokens."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cHCtVEMZnuMz",
-        "outputId": "39039f96-8772-4dd7-8c38-1c736c3b3c2b"
+        "id": "cHCtVEMZnuMz"
       },
       "outputs": [],
       "source": [
@@ -235,11 +188,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xn35koGHiBry",
-        "outputId": "e86b1e14-3f06-4efa-df82-1665e81569fd"
+        "id": "xn35koGHiBry"
       },
       "outputs": [],
       "source": [
@@ -253,23 +202,19 @@
         "id": "SfE97fmlH0iC"
       },
       "source": [
-        "### Speciális tokenek\n",
-        "- [UNK] ismeretlen token jelölése\n",
-        "- [CLS] teljes mondatot reprezentáló token\n",
-        "- [SEP] mondat szeparátor token\n",
-        "- [PAD] padding token a fix input hossz feltöltését biztosító token\n",
-        "- [MASK] Maszkolást biztosító token. pl.: \"Hello I'm a [MASK] model.\""
+        "### Special tokens\n",
+        "- [UNK] unknown token\n",
+        "- [CLS] complete sentence token\n",
+        "- [SEP] sentence separator token\n",
+        "- [PAD] padding token, fixed input length padding token\n",
+        "- [MASK] Masking token. e.g. \"Hello I'm a [MASK] model.\""
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "__JcBiSuH0iD",
-        "outputId": "7e071386-7c5e-4154-9af0-e0e345bdcc12"
+        "id": "__JcBiSuH0iD"
       },
       "outputs": [],
       "source": [
@@ -284,11 +229,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OyhIAhd3H0iE",
-        "outputId": "f0345056-bef4-4734-c2e3-76ce8150f1a4"
+        "id": "OyhIAhd3H0iE"
       },
       "outputs": [],
       "source": [
@@ -315,12 +256,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 144
-        },
-        "id": "AjyQtZ7XH0iI",
-        "outputId": "f305737a-b378-47ae-e9cf-ca51962fe2c0"
+        "id": "AjyQtZ7XH0iI"
       },
       "outputs": [],
       "source": [
@@ -353,12 +289,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 161
-        },
-        "id": "9Nw7lkmTH0iN",
-        "outputId": "2105245a-5619-47cf-f7e4-250da8955f83"
+        "id": "9Nw7lkmTH0iN"
       },
       "outputs": [],
       "source": [
@@ -370,11 +301,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "23IyXe06H0iO",
-        "outputId": "b93a0e53-5b44-4b65-e79b-62522a5957d5"
+        "id": "23IyXe06H0iO"
       },
       "outputs": [],
       "source": [
@@ -387,11 +314,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MLOQavm1H0iO",
-        "outputId": "fa177b9c-a4e4-4d52-b458-7d6f0fd1baa3"
+        "id": "MLOQavm1H0iO"
       },
       "outputs": [],
       "source": [
@@ -422,11 +345,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "g7unTQtzH0iR",
-        "outputId": "ad5c26c2-e939-47fc-d5d4-70075b041733"
+        "id": "g7unTQtzH0iR"
       },
       "outputs": [],
       "source": [
@@ -439,11 +358,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hPgAEjoaH0iS",
-        "outputId": "fc7d1656-2b2d-4b52-ebec-5ca9944b686e"
+        "id": "hPgAEjoaH0iS"
       },
       "outputs": [],
       "source": [
@@ -474,11 +389,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7vO3V_yLH0iV",
-        "outputId": "d551fd9b-73d8-43fd-9225-f2a0629b8b50"
+        "id": "7vO3V_yLH0iV"
       },
       "outputs": [],
       "source": [
@@ -491,11 +402,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "V3M6yvtxH0iW",
-        "outputId": "225b8457-c2a7-4af5-a947-80b849f3b1fc"
+        "id": "V3M6yvtxH0iW"
       },
       "outputs": [],
       "source": [
@@ -509,10 +416,10 @@
         "id": "EMNGhG6dH0iX"
       },
       "source": [
-        "## Pretrained tokenizer, használata\n",
+        "## Pretrained tokenizer, usage\n",
         "\n",
         "- BERT\n",
-        "- WordPiece: Ez a BPE-hez nagyon hasonló részszó-tokenizációs algoritmus, amelyet főként a Google használ olyan modellekben, mint a BERT. Mohó algoritmust használ, amely először hosszú szavakat próbál felépíteni. Ez eltér a BPE-től, amely karakterekből indul ki, és minél nagyobb tokeneket épít. A híres ## előtagot használja a szó részét képező jelzők azonosítására (azaz nem kezdődő szó)."
+        "- WordPiece: This is a subword tokenization algorithm very similar to BPE, which is mainly used by Google in models like BERT. It uses a greedy algorithm that tries to build long words first. This is different from BPE, which starts with characters and builds tokens as large as possible. It uses the ## prefix to identify tokens that are part of a word (i.e. not the beginning of a word)."
       ]
     },
     {
@@ -549,11 +456,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DSt6X5NaH0iY",
-        "outputId": "d83d040e-5ea0-4b82-aa30-1f4e53d55c60"
+        "id": "DSt6X5NaH0iY"
       },
       "outputs": [],
       "source": [
@@ -567,8 +470,9 @@
         "id": "YE_IDEOTskxb"
       },
       "source": [
-        "### Saját WordPiece építése\n",
-        "Ugyanúgy mint a BPE-nél csak használjuk a WordPiece libet"
+        "### Building your own WordPiece\n",
+        "\n",
+        "Same as BPE, just use the WordPiece lib."
       ]
     },
     {
@@ -589,11 +493,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Yb35ERn2kUdK",
-        "outputId": "381fee68-adb7-41fa-a8c5-43410469d82a"
+        "id": "Yb35ERn2kUdK"
       },
       "outputs": [],
       "source": [
@@ -619,11 +519,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KBSxLtzGj2KV",
-        "outputId": "baf9b39f-8c57-4d3f-fd24-8a1f87851897"
+        "id": "KBSxLtzGj2KV"
       },
       "outputs": [],
       "source": [
@@ -638,7 +534,8 @@
       },
       "source": [
         "## Unigram\n",
-        "Az Unigram egy részszó tokenizációs algoritmus is, és úgy működik, hogy megpróbálja azonosítani a legjobb részszó tokenek készletet, hogy maximalizálja az adott mondat valószínűségét. Ez abban különbözik a BPE-től, hogy nem determinisztikus, szekvenciálisan alkalmazott szabályok alapján. Ehelyett az Unigram képes lesz többféle tokenizálási módot kiszámítani, miközben kiválasztja a legvalószínűbbet."
+        "\n",
+        "Unigram is also a subword tokenization algorithm, and works by trying to identify the best set of subword tokens to maximize the likelihood of a given sentence. It differs from BPE in that it is not deterministic, based on sequentially applied rules. Instead, Unigram will be able to compute multiple tokenization schemes while selecting the most likely one."
       ]
     },
     {
